--- a/index.html
+++ b/index.html
@@ -1,90 +1,82 @@
-# Privacy Policy
+<!DOCTYPE html>
+<html lang="bn">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - Tezvia</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.8;
+            color: #333;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 40px 20px;
+            background-color: #f9f9f9;
+        }
+        .container {
+            background: #fff;
+            padding: 40px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+        h1 { color: #2c3e50; border-bottom: 2px solid #3498db; padding-bottom: 10px; }
+        h2 { color: #2980b9; margin-top: 30px; }
+        h3 { color: #34495e; margin-top: 20px; }
+        p, li { margin-bottom: 15px; }
+        ul { padding-left: 20px; }
+        .footer { margin-top: 50px; font-size: 0.9em; color: #7f8c8d; border-top: 1px solid #eee; padding-top: 20px; }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Privacy Policy</h1>
+        <p>This privacy policy applies to the <strong>Tezvia</strong> app for mobile devices that was created by <strong>Md Riaj</strong> (Developer of Tezvia) as a Free service. This service is intended for use "AS IS".</p>
 
-This privacy policy applies to the *Tezvia* app (hereby referred to as "Application") for mobile devices that was created by *Md Riaj* (Developer of Tezvia) (hereby referred to as "Service Provider") as a Free service. This service is intended for use "AS IS".
+        <h2>Information Collection and Use</h2>
+        <p>The Application collects information when you download and use it. This information may include:</p>
+        <ul>
+            <li>Device's Internet Protocol address (IP address)</li>
+            <li>The pages of the Application that you visit, the time and date of your visit.</li>
+            <li>The operating system you use on your mobile device.</li>
+        </ul>
 
----
+        <h3>Geolocation Data</h3>
+        <p>The Service Provider utilizes location data for:</p>
+        <ul>
+            <li><strong>Personalized Content:</strong> Providing relevant recommendations.</li>
+            <li><strong>Analytics:</strong> Improving the overall performance of the Application.</li>
+        </ul>
 
-## Information Collection and Use
-The Application collects information when you download and use it. This information may include:
+        <h2>Personally Identifiable Information (PII)</h2>
+        <p>Tezvia collects PII to provide social networking services:</p>
+        
+        <h3>1. Information You Provide Directly</h3>
+        <ul>
+            <li><strong>Identity Data:</strong> Name, Email, Username, Password (hashed), Date of Birth, Profile Photo, Bio.</li>
+            <li><strong>Contact Data:</strong> Phone Number (optional).</li>
+        </ul>
 
-* Your device's Internet Protocol address (e.g. IP address)
-* The pages of the Application that you visit, the time and date of your visit, and the time spent on those pages
-* The total time spent on the Application
-* The operating system you use on your mobile device
+        <h3>2. Third-Party Services</h3>
+        <p>If you sign in with Google, we collect your Full Name, Email, and Profile Picture.</p>
 
-### Geolocation Data
-The Application collects your device's location to help the Service Provider in the following ways:
-* *Geolocation Services:* To provide features such as personalized content and location-based services.
-* *Analytics and Improvements:* Aggregated and anonymized data helps analyze user behavior and identify trends.
-* *Third-Party Services:* Periodically, anonymized location data may be transmitted to external services to optimize offerings.
+        <h3>3. User-Generated Content</h3>
+        <p>Posts, photos, videos, comments, and direct messages you share on our platform.</p>
 
----
+        <h2>Third Party Access</h2>
+        <p>Only anonymized data is transmitted to services like:</p>
+        <p>Google Play Services, AdMob, Firebase Crashlytics, Facebook, One Signal, Sentry, etc.</p>
 
-## Personally Identifiable Information (PII)
-To provide and improve our social networking services, we collect various types of PII:
+        <h2>Data Retention Policy</h2>
+        <p>We retain data as long as you use the Application. For deletion requests, email: <strong>tezvia.official@gmail.com</strong>.</p>
 
-### 1. Information You Provide to Us Directly
-* *Identity Data:* First and Last Name, Email Address, Username, Password (encrypted/hashed), Date of Birth, Profile Photo, and Bio.
-* *Contact Data:* Phone Number (optional, for account verification).
+        <h2>Children's Privacy</h2>
+        <p>We do not knowingly collect data from children under 13. If found, it will be deleted immediately.</p>
 
-### 2. Information from Third-Party Services
-* *Google Account:* If you sign in with Google, we collect your Full Name, Email, and Profile Picture.
-
-### 3. User-Generated Content
-* Posts, photos, videos, and media you upload.
-* Comments, direct messages, chats, and live stream content.
-
-### 4. Automatically Collected Technical Information
-* IP Address, Device ID, advertising ID, Device type, and OS version.
-* Crash reports and app usage activity.
-
-### 5. Information We May Collect in the Future (With Permission)
-* *Precise GPS location* (for "Nearby Friends" features).
-* *Contact List* (to help find friends).
-* *Financial Data* (for premium subscriptions/purchases).
-* *Sensitive Information* (optional data like gender identity or beliefs).
-
----
-
-## Third Party Access
-Only aggregated, anonymized data is periodically transmitted to external services. Below are the third-party service providers used by the Application:
-
-* [Google Play Services](https://www.google.com/policies/privacy/)
-* [AdMob](https://support.google.com/admob/answer/6128543?hl=en)
-* [Google Analytics for Firebase](https://firebase.google.com/policies/analytics)
-* [Firebase Crashlytics](https://firebase.google.com/support/privacy/)
-* [Facebook](https://www.facebook.com/about/privacy/update/printable)
-* [One Signal](https://onesignal.com/privacy_policy)
-* [Sentry](https://sentry.io/privacy/)
-* [Amplitude](https://amplitude.com/privacy)
-* [Mapbox](https://www.mapbox.com/legal/privacy)
-* [Mixpanel](https://mixpanel.com/legal/privacy-policy/)
-* [RevenueCat](https://www.revenuecat.com/privacy)
-
----
-
-## Use of Artificial Intelligence
-The Application uses *Artificial Intelligence (AI)* to enhance user experience (e.g., personalized recommendations). All AI processing is performed in accordance with this policy and applicable laws.
-
-## Opt-Out Rights
-You can stop all collection of information by the Application easily by *uninstalling it* using the standard processes available on your mobile device.
-
-## Data Retention Policy
-The Service Provider will retain User-Provided data for as long as you use the Application. To request data deletion, contact: *tezvia.official@gmail.com*.
-
-## Children's Privacy
-The Application does not address anyone under the age of *13*. If a child under 13 provides personal information, it will be deleted immediately. Parents can contact the Service Provider for necessary actions.
-
-## Security
-We provide physical, electronic, and procedural safeguards to protect your information and maintain confidentiality.
-
-## Changes
-This Privacy Policy may be updated from time to time. We will notify you of any changes by updating this page.
-
-*Effective Date:* 2025-12-19
-
----
-
-## Contact Us
-If you have any questions regarding privacy, please contact:
-*Email:* tezvia.official@gmail.com
+        <div class="footer">
+            <p><strong>Effective Date:</strong> 2025-12-19</p>
+            <p><strong>Contact Us:</strong> If you have any questions, contact us at <strong>tezvia.official@gmail.com</strong>.</p>
+        </div>
+    </div>
+</body>
+</html>
