--- a/index.html
+++ b/index.html
@@ -1,82 +1,99 @@
 <!DOCTYPE html>
-<html lang="bn">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - Tezvia</title>
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.8;
-            color: #333;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 40px 20px;
-            background-color: #f9f9f9;
-        }
-        .container {
-            background: #fff;
-            padding: 40px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-        }
-        h1 { color: #2c3e50; border-bottom: 2px solid #3498db; padding-bottom: 10px; }
-        h2 { color: #2980b9; margin-top: 30px; }
-        h3 { color: #34495e; margin-top: 20px; }
-        p, li { margin-bottom: 15px; }
-        ul { padding-left: 20px; }
-        .footer { margin-top: 50px; font-size: 0.9em; color: #7f8c8d; border-top: 1px solid #eee; padding-top: 20px; }
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; line-height: 1.6; color: #333; max-width: 850px; margin: 0 auto; padding: 30px; background-color: #f4f7f9; }
+        .content-box { background: #fff; padding: 40px; border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); }
+        h1 { color: #2c3e50; border-bottom: 3px solid #3498db; padding-bottom: 10px; margin-bottom: 20px; }
+        h2 { color: #2980b9; margin-top: 30px; font-size: 1.3em; border-left: 4px solid #3498db; padding-left: 10px; }
+        h3 { color: #34495e; margin-top: 20px; font-size: 1.1em; }
+        p { margin-bottom: 15px; text-align: justify; }
+        ul { margin-bottom: 20px; padding-left: 20px; }
+        li { margin-bottom: 8px; }
+        .terms-link-box { background: #fff3cd; padding: 15px; border-radius: 8px; border: 1px solid #ffeeba; margin: 25px 0; text-align: center; }
+        .terms-link-box a { color: #856404; font-weight: bold; text-decoration: none; }
+        .contact-info { background: #eef2f7; padding: 20px; border-radius: 5px; margin-top: 30px; border-left: 5px solid #3498db; }
+        .footer { margin-top: 40px; font-size: 0.9em; color: #7f8c8d; text-align: center; border-top: 1px solid #eee; padding-top: 20px; }
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="content-box">
         <h1>Privacy Policy</h1>
-        <p>This privacy policy applies to the <strong>Tezvia</strong> app for mobile devices that was created by <strong>Md Riaj</strong> (Developer of Tezvia) as a Free service. This service is intended for use "AS IS".</p>
+        <p>This Privacy Policy applies to the <strong>Tezvia</strong> mobile application ("Application") created by <strong>Md Riaj</strong> ("Service Provider") as a Free service. This service is provided "AS IS" and is intended for use in its current state.</p>
 
-        <h2>Information Collection and Use</h2>
-        <p>The Application collects information when you download and use it. This information may include:</p>
-        <ul>
-            <li>Device's Internet Protocol address (IP address)</li>
-            <li>The pages of the Application that you visit, the time and date of your visit.</li>
-            <li>The operating system you use on your mobile device.</li>
-        </ul>
+        <div class="terms-link-box">
+            <span>By using this app, you also agree to our </span>
+            <a href="https://tezviaapp.github.io/Terms-Conditions/terms.html" target="_blank">Terms & Conditions</a>
+        </div>
 
-        <h3>Geolocation Data</h3>
-        <p>The Service Provider utilizes location data for:</p>
-        <ul>
-            <li><strong>Personalized Content:</strong> Providing relevant recommendations.</li>
-            <li><strong>Analytics:</strong> Improving the overall performance of the Application.</li>
-        </ul>
-
-        <h2>Personally Identifiable Information (PII)</h2>
-        <p>Tezvia collects PII to provide social networking services:</p>
+        <h2>1. Information Collection and Use</h2>
+        <p>To provide a seamless social networking experience, we collect various types of information:</p>
         
-        <h3>1. Information You Provide Directly</h3>
+        <h3>A. Automatically Collected Information:</h3>
         <ul>
-            <li><strong>Identity Data:</strong> Name, Email, Username, Password (hashed), Date of Birth, Profile Photo, Bio.</li>
-            <li><strong>Contact Data:</strong> Phone Number (optional).</li>
+            <li><strong>Device Data:</strong> IP Address, Device ID (Advertising ID), Operating System version.</li>
+            <li><strong>Usage Data:</strong> App features used, time/date of activity, and crash logs.</li>
+            <li><strong>Cookies & Tracking:</strong> We use SDKs, Pixels, and Advertising identifiers to track performance.</li>
         </ul>
 
-        <h3>2. Third-Party Services</h3>
-        <p>If you sign in with Google, we collect your Full Name, Email, and Profile Picture.</p>
+        <h3>B. Information You Provide (PII):</h3>
+        <ul>
+            <li><strong>Identity Data:</strong> Name, Username, Email, Password (securely hashed), Date of Birth, Profile Photo, and Bio.</li>
+            <li><strong>Contact Data:</strong> Phone Number (optional).</li>
+            <li><strong>Authentication:</strong> Name, Email, and Profile Picture from Google or Facebook logins.</li>
+        </ul>
 
-        <h3>3. User-Generated Content</h3>
-        <p>Posts, photos, videos, comments, and direct messages you share on our platform.</p>
+        <h3>C. User-Generated Content (UGC):</h3>
+        <p>We collect Posts, Images, Videos, Comments, and Direct Messages (DMs) you share. <strong>Disclaimer:</strong> You are solely responsible for the content you post.</p>
 
-        <h2>Third Party Access</h2>
-        <p>Only anonymized data is transmitted to services like:</p>
-        <p>Google Play Services, AdMob, Firebase Crashlytics, Facebook, One Signal, Sentry, etc.</p>
+        <h2>2. Location Information</h2>
+        <p>We collect Approximate and Precise Location data to provide personalized content, relevant advertisements, and analytics.</p>
 
-        <h2>Data Retention Policy</h2>
-        <p>We retain data as long as you use the Application. For deletion requests, email: <strong>tezvia.official@gmail.com</strong>.</p>
+        <h2>3. How We Use Your Information</h2>
+        <ul>
+            <li><strong>Account Management:</strong> Maintaining your profile.</li>
+            <li><strong>Social Features:</strong> Enabling interactions and messaging.</li>
+            <li><strong>Monetization:</strong> Displaying personalized ads through partners.</li>
+            <li><strong>Security:</strong> Preventing fraud and ensuring legal compliance.</li>
+        </ul>
 
-        <h2>Children's Privacy</h2>
-        <p>We do not knowingly collect data from children under 13. If found, it will be deleted immediately.</p>
+        <h2>4. AI & Automated Processing</h2>
+        <p>Tezvia incorporates AI technologies for content moderation or recommendations. By using the app, you consent to automated data processing.</p>
+
+        <h2>5. Third-Party Services & Advertising</h2>
+        <p>We share limited data with partners like Google Play Services, AdMob, Firebase, Facebook SDK, OneSignal, Mapbox, and others for functionality and revenue.</p>
+
+        <h2>6. Data Retention and Deletion</h2>
+        <p>We keep data as long as your account is active. To delete your account and all data, contact us at <strong>tezvia.official@gmail.com</strong>.</p>
+
+        <h2>7. Data Security</h2>
+        <p>We implement industry-standard encryption, but no method of digital storage is 100% secure. We provide best-effort protection.</p>
+
+        <h2>8. International Data Transfer</h2>
+        <p>You consent to your data being processed in servers located outside your home country in compliance with regulations.</p>
+
+        <h2>9. Children’s Privacy</h2>
+        <p>Tezvia is not intended for children under 13. We delete such data immediately upon discovery.</p>
+
+        <h2>10. Legal Compliance (GDPR/CCPA)</h2>
+        <p>We strive to follow GDPR and CCPA principles, ensuring users have control over their data privacy.</p>
+
+        <h2>11. Changes to This Policy</h2>
+        <p>Continued use of the app after updates constitutes acceptance of the revised Privacy Policy.</p>
+
+        <div class="contact-info">
+            <strong>Contact Us:</strong><br>
+            Email: <strong>tezvia.official@gmail.com</strong>
+        </div>
 
         <div class="footer">
-            <p><strong>Effective Date:</strong> 2025-12-19</p>
-            <p><strong>Contact Us:</strong> If you have any questions, contact us at <strong>tezvia.official@gmail.com</strong>.</p>
+            Effective Date: 2025-12-19<br>
+            &copy; 2025 Tezvia - Md Riaj
         </div>
     </div>
 </body>
 </html>
+
