--- a/index.html
+++ b/index.html
@@ -34,55 +34,62 @@
         
         <h3>A. Automatically Collected Information:</h3>
         <ul>
-            <li><strong>Device Data:</strong> IP Address, Device ID (Advertising ID), Operating System version.</li>
+            <li><strong>Device Data:</strong> IP Address, Device ID (Advertising ID), and Operating System version.</li>
             <li><strong>Usage Data:</strong> App features used, time/date of activity, and crash logs.</li>
-            <li><strong>Cookies & Tracking:</strong> We use SDKs, Pixels, and Advertising identifiers to track performance.</li>
+            <li><strong>Cookies & Tracking:</strong> We use SDKs and pixels to track app performance.</li>
         </ul>
 
         <h3>B. Information You Provide (PII):</h3>
         <ul>
-            <li><strong>Identity Data:</strong> Name, Username, Email, Password (securely hashed), Date of Birth, Profile Photo, and Bio.</li>
-            <li><strong>Contact Data:</strong> Phone Number (optional).</li>
-            <li><strong>Authentication:</strong> Name, Email, and Profile Picture from Google or Facebook logins.</li>
+            <li><strong>Identity Data:</strong> Name, Username, Email, Password (securely hashed), Date of Birth, and Profile Photo.</li>
+            <li><strong>Authentication:</strong> Name, Email, and Profile Picture collected when you log in via Google or Facebook.</li>
         </ul>
 
         <h3>C. User-Generated Content (UGC):</h3>
-        <p>We collect Posts, Images, Videos, Comments, and Direct Messages (DMs) you share. <strong>Disclaimer:</strong> You are solely responsible for the content you post.</p>
+        <p>We collect Posts, Images, Videos, and Comments you share. <strong>Policy:</strong> We have a zero-tolerance policy for objectionable content. Any user found sharing abusive or illegal content will be banned immediately.</p>
 
         <h2>2. Location Information</h2>
-        <p>We collect Approximate and Precise Location data to provide personalized content, relevant advertisements, and analytics.</p>
+        <p>We collect Approximate and Precise Location data to provide personalized content, recommendations, and relevant advertisements. All location data is processed securely.</p>
 
         <h2>3. How We Use Your Information</h2>
         <ul>
-            <li><strong>Account Management:</strong> Maintaining your profile.</li>
-            <li><strong>Social Features:</strong> Enabling interactions and messaging.</li>
-            <li><strong>Monetization:</strong> Displaying personalized ads through partners.</li>
-            <li><strong>Security:</strong> Preventing fraud and ensuring legal compliance.</li>
+            <li><strong>Account Management:</strong> To create and maintain your profile.</li>
+            <li><strong>Communication:</strong> To send push notifications via OneSignal.</li>
+            <li><strong>Monetization:</strong> To show ads through AdMob and Facebook Audience Network.</li>
+            <li><strong>Security:</strong> To prevent fraud and ensure a safe environment.</li>
         </ul>
 
-        <h2>4. AI & Automated Processing</h2>
-        <p>Tezvia incorporates AI technologies for content moderation or recommendations. By using the app, you consent to automated data processing.</p>
+        <h2>4. Third-Party Services</h2>
+        <p>We share limited data with trusted third-party providers. You can review their privacy policies here:</p>
+        <ul>
+            <li><a href="https://policies.google.com/privacy" target="_blank">Google Play Services</a></li>
+            <li><a href="https://support.google.com/admob/answer/6128543" target="_blank">AdMob</a></li>
+            <li><a href="https://firebase.google.com/support/privacy" target="_blank">Firebase Analytics</a></li>
+            <li><a href="https://onesignal.com/privacy_policy" target="_blank">OneSignal</a></li>
+            <li><a href="https://www.facebook.com/about/privacy" target="_blank">Facebook</a></li>
+        </ul>
 
-        <h2>5. Third-Party Services & Advertising</h2>
-        <p>We share limited data with partners like Google Play Services, AdMob, Firebase, Facebook SDK, OneSignal, Mapbox, and others for functionality and revenue.</p>
+        <h2>5. Data Security (Encryption)</h2>
+        <p>We prioritize the security of your data. All information transmitted between the Application and our servers is encrypted in transit using SSL/TLS protocols. We use secure hashing for passwords to ensure your credentials are safe.</p>
 
-        <h2>6. Data Retention and Deletion</h2>
-        <p>We keep data as long as your account is active. To delete your account and all data, contact us at <strong>tezvia.official@gmail.com</strong>.</p>
+        <h2>6. Data Deletion & User Rights</h2>
+        <ul>
+            <li><strong>Access & Update:</strong> You can edit your profile information within the app.</li>
+            <li><strong>Account Deletion:</strong> You can delete your account from the Settings menu.</li>
+            <li><strong>Manual Request:</strong> Alternatively, email us at <strong>tezvia.official@gmail.com</strong>. Data will be removed within 30 days.</li>
+        </ul>
 
-        <h2>7. Data Security</h2>
-        <p>We implement industry-standard encryption, but no method of digital storage is 100% secure. We provide best-effort protection.</p>
+        <h2>7. AI & Automated Processing</h2>
+        <p>The Application uses AI for content moderation and personalized feeds. By using Tezvia, you consent to automated processing of your data.</p>
 
-        <h2>8. International Data Transfer</h2>
-        <p>You consent to your data being processed in servers located outside your home country in compliance with regulations.</p>
+        <h2>8. Children’s Privacy</h2>
+        <p>Tezvia is not intended for children under 13. We do not knowingly collect personal data from children and will delete it immediately if discovered.</p>
 
-        <h2>9. Children’s Privacy</h2>
-        <p>Tezvia is not intended for children under 13. We delete such data immediately upon discovery.</p>
+        <h2>9. International Data Transfer</h2>
+        <p>Your data may be processed in servers outside your home country in compliance with regulations like GDPR/CCPA.</p>
 
-        <h2>10. Legal Compliance (GDPR/CCPA)</h2>
-        <p>We strive to follow GDPR and CCPA principles, ensuring users have control over their data privacy.</p>
-
-        <h2>11. Changes to This Policy</h2>
-        <p>Continued use of the app after updates constitutes acceptance of the revised Privacy Policy.</p>
+        <h2>10. Changes to This Policy</h2>
+        <p>Your continued use of the app after any changes are posted constitutes your acceptance of the new Privacy Policy.</p>
 
         <div class="contact-info">
             <strong>Contact Us:</strong><br>
